--- a/README.Rmd
+++ b/README.Rmd
@@ -36,10 +36,11 @@ Please cite this compendium as:
 The **analysis** directory contains:
 
   - [:file\_folder: data](/analysis/data): Data used in the analysis.
-  - [:file\_folder: R_scripts](/analysis/R_scripts): R scripts run 
-  as part of these analyses.
   - [:file\_folder: figures](/analysis/figures): Plots and other
     illustrations
+  - [:file\_folder: model_files](/analysis/model_files): JAGS model files
+  - [:file\_folder: R_scripts](/analysis/R_scripts): R scripts run 
+  as part of these analyses.
   - [:file\_folder: supplementary-materials](/analysis/supplementary-materials):
     Supplementary materials including notes and other documents
     prepared and collected during the analysis.
@@ -73,7 +74,6 @@ You can download the compendium as a zip from from this URL:
 - open the `.Rproj` file in RStudio
 - run `devtools::install()` to ensure you have the packages this analysis depends on (also listed in the
 [DESCRIPTION](/DESCRIPTION) file).
-- finally, open `analysis/paper/paper.Rmd` and knit to produce the `paper.docx`, or run `rmarkdown::render("analysis/paper/paper.Rmd")` in the R console
 
 ### Licenses
 
